# alias-rs

./: Cargo.toml  Makefile  README.md  config.example.json
src/: config.rs  main.rs  shell.rs
