[package]
name = "alias-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
